--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,8 @@ dependencies:
   firebase_auth: ^4.2.5
   cloud_firestore: ^4.3.1
   firebase_analytics: ^10.1.0
+  image_picker: ^0.8.6+1
+  get: ^4.6.5
 
 dev_dependencies:
   flutter_test:
