--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   firebase_auth: ^4.2.5
   cloud_firestore: ^4.3.1
   firebase_analytics: ^10.1.0
+  google_sign_in: ^5.4.3
 
 dev_dependencies:
   flutter_test:
