--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   firebase_analytics: ^10.1.0
   image_picker: ^0.8.6+1
   get: ^4.6.5
+  google_sign_in: ^5.4.3
 
 dev_dependencies:
   flutter_test:
