--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,8 @@ dependencies:
   image_picker: ^0.8.6+1
   get: ^4.6.5
   quantity_input: ^1.0.2
+  timezone: ^0.9.1
+  flutter_local_notifications: ^13.0.0
 
 dev_dependencies:
   flutter_test:
