--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,9 +39,12 @@ dependencies:
   firebase_analytics: ^10.1.0
   image_picker: ^0.8.6+1
   get: ^4.6.5
+  google_sign_in: ^5.4.3
   quantity_input: ^1.0.2
   timezone: ^0.9.1
   flutter_local_notifications: ^13.0.0
+  sqflite: ^2.2.4+1
+
 
 dev_dependencies:
   flutter_test:
